; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-commit.c_tb_free.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-commit.c_tb_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.transaction_buffer = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.transaction_buffer*)* @tb_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tb_free(%struct.transaction_buffer* %0) #0 {
  %2 = alloca %struct.transaction_buffer*, align 8
  store %struct.transaction_buffer* %0, %struct.transaction_buffer** %2, align 8
  %3 = load %struct.transaction_buffer*, %struct.transaction_buffer** %2, align 8
  %4 = getelementptr inbounds %struct.transaction_buffer, %struct.transaction_buffer* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %14

7:                                                ; preds = %1
  %8 = load %struct.transaction_buffer*, %struct.transaction_buffer** %2, align 8
  %9 = getelementptr inbounds %struct.transaction_buffer, %struct.transaction_buffer* %8, i32 0, i32 0
  %10 = load i32*, i32** %9, align 8
  %11 = call i32 @free(i32* %10)
  %12 = load %struct.transaction_buffer*, %struct.transaction_buffer** %2, align 8
  %13 = getelementptr inbounds %struct.transaction_buffer, %struct.transaction_buffer* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  br label %14

14:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
